--- a/ios-developer.html
+++ b/ios-developer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585459'>Stellenangebot: iOS-Developer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585459'>Stellenangebot: iOS-Developer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
+<h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Comtecinfo1/743999697909108-ios-mobile-developer'>comtecinfo iOS Mobile Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Comtecinfo1/743999697909108-ios-mobile-developer'>comtecinfo iOS Mobile Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -183,7 +183,7 @@ building continuous integration pipelines; Demonstrable mastery in the?...</p>
 company behind the world's fastest payments processing network. We are a 
 vehicle?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Undabot/743999694809482-ios-developer'>Undabot iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Undabot/743999694809482-ios-developer'>Undabot iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -285,7 +285,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914841'>Job Application for iOS Developer(eCommerce Platform)  at Algorythma</a></h5> 
+<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914841'>Job Application for iOS Developer(eCommerce Platform)  at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -345,7 +345,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://touchbistro.applytojob.com/apply/wWY2O06LBA/Intermediate-IOS-Developer'>Intermediate iOS Developer - TouchBistro - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://touchbistro.applytojob.com/apply/wWY2O06LBA/Intermediate-IOS-Developer'>Intermediate iOS Developer - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Apply to Intermediate iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
@@ -397,11 +397,11 @@ vehicle?...</p>
 <p><span class="badge badge-light">Manchester England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://studentbeans.workable.com/j/DCF338B76A'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studentbeans.workable.com/j/DCF338B76A'>Student Beans - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://touchbistro.applytojob.com/apply/n3VFW0a5io/Senior-IOS-Developer'>Senior iOS Developer - TouchBistro - Career Page</a></h5> 
+<h5><a href='https://touchbistro.applytojob.com/apply/n3VFW0a5io/Senior-IOS-Developer'>Senior iOS Developer - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
@@ -457,7 +457,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/414518-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/414518-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
